[gd_scene load_steps=17 format=2]

[ext_resource path="res://people/generic_man_idle_alert.png" type="Texture" id=1]
[ext_resource path="res://people/generic_man_walk.png" type="Texture" id=2]
[ext_resource path="res://people/generic_man_talk.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Temp/Commander.gd" type="Script" id=5]
[ext_resource path="res://Temp/People.gd" type="Script" id=6]
[ext_resource path="res://Trailer/Spearman.tscn" type="PackedScene" id=7]
[ext_resource path="res://Trailer/Farmer.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "talk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="People" type="Node2D"]
script = ExtResource( 6 )

[node name="Commander" type="Node2D" parent="."]
position = Vector2( -8, 200 )
z_index = 10
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Commander"]
frames = SubResource( 7 )
animation = "idle"

[node name="Label" type="Label" parent="Commander"]
margin_left = -72.0
margin_top = -152.0
margin_right = 64.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "This is test text"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spearman1" parent="." instance=ExtResource( 7 )]
position = Vector2( -248, 0 )

[node name="Spearman2" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 0 )

[node name="Farmer1" parent="." instance=ExtResource( 8 )]
position = Vector2( 304, 176 )

[node name="Farmer2" parent="." instance=ExtResource( 8 )]
